--- a/monzzle2.0/about.html
+++ b/monzzle2.0/about.html
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-    <!-- <div class="loader_bg">
+    <div class="loader_bg">
         <div class="loader"></div>
-    </div> -->
+    </div>
 
     <header>
         <div class="logo">
@@ -115,7 +115,7 @@
                 <p>-Winstion Churchill</p>
 
                 <audio controls autoplay>
-                    <!-- <source src="resource/Churchill.mp3" type="audio/mpeg"> -->
+                    <source src="resource/Churchill.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </div>
@@ -262,6 +262,7 @@
             ScrollReveal().reveal('.s4 .section-40', { delay: 500, origin: 'right' });
             ScrollReveal().reveal('.s5 .section-title', { delay: 500, origin: 'bottom' });
             ScrollReveal().reveal('.s5 .member', { delay: 1000, origin: 'bottom', interval: 400 });
+            ScrollReveal().reveal('.s6', { delay: 500, origin: 'left' });
         };
 
         $('#content').mouseover(() => {
