--- a/monzzle2.0/about.html
+++ b/monzzle2.0/about.html
@@ -25,7 +25,7 @@
 
     <header>
         <div class="logo">
-            <a href="#"><img src="resource/headerlogo.png" class=""></a>
+            <a href="index.html"><img src="resource/headerlogo.png" class=""></a>
         </div>
         <div class="right">
             <div id="menu-border"></div>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="info">
                     班級：<br />
-                    四文三甲
+                    四文四甲
                 </div>
                 <div class="info">
                     聯絡資訊：<br />
@@ -106,7 +106,7 @@
 
     <section class="s3">
         <div class="section-40">
-            <img src="resource/Churchill.jpg" class="image">
+            <img src="resource/Churchill-min.jpg" class="image">
         </div>
         <div class="section-60">
             <div>
@@ -114,7 +114,7 @@
                 <p>underidoderidoderiododeriodoo</p>
                 <p>-Winstion Churchill</p>
 
-                <audio controls autoplay>
+                <audio controls>
                     <source src="resource/Churchill.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
@@ -254,15 +254,15 @@
                 duration: 2500,
                 delay: 400
             });
-            ScrollReveal().reveal('.s1', { delay: 500, origin: 'bottom' });
-            ScrollReveal().reveal('.s2 .section-40', { delay: 500, origin: 'right' });
+            ScrollReveal().reveal('.s1', { delay: 200, origin: 'bottom' });
+            ScrollReveal().reveal('.s2 .section-40', { delay: 200, origin: 'right' });
             ScrollReveal().reveal('.s2 .section-60 div, .s3 .section-60 div', { delay: 500, origin: 'bottom' });
-            ScrollReveal().reveal('.s3 .section-40', { delay: 1000, origin: 'left' });
-            ScrollReveal().reveal('.s4 .section-60', { delay: 500, origin: 'left' });
-            ScrollReveal().reveal('.s4 .section-40', { delay: 500, origin: 'right' });
-            ScrollReveal().reveal('.s5 .section-title', { delay: 500, origin: 'bottom' });
-            ScrollReveal().reveal('.s5 .member', { delay: 1000, origin: 'bottom', interval: 400 });
-            ScrollReveal().reveal('.s6', { delay: 500, origin: 'left' });
+            ScrollReveal().reveal('.s3 .section-40', { delay: 500, origin: 'left' });
+            ScrollReveal().reveal('.s4 .section-60', { delay: 200, origin: 'left' });
+            ScrollReveal().reveal('.s4 .section-40', { delay: 200, origin: 'right' });
+            ScrollReveal().reveal('.s5 .section-title', { delay: 200, origin: 'bottom' });
+            ScrollReveal().reveal('.s5 .member', { delay: 400, origin: 'bottom', interval: 100 });
+            ScrollReveal().reveal('.s6', { delay: 200, origin: 'left' });
         };
 
         $('#content').mouseover(() => {
