--- a/monzzle2.0/index.html
+++ b/monzzle2.0/index.html
@@ -24,7 +24,7 @@
 
     <header>
         <div class="logo">
-            <a href="#"><img src="resource/headerlogo.png" class=""></a>
+            <a href="index.html"><img src="resource/headerlogo.png" class=""></a>
         </div>
         <div class="right">
             <div id="menu-border"></div>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="info">
                     班級：<br />
-                    四文三甲
+                    四文四甲
                 </div>
                 <div class="info">
                     聯絡資訊：<br />
@@ -90,10 +90,10 @@
     </section>
 
     <section>
-        
+
     </section>
 
-    
+
 
     <script src="js/menu.js"></script>
     <script>
@@ -116,7 +116,8 @@
         });
 
         ScrollReveal({
-            reset: true, distance: '60px',
+            reset: true,
+            distance: '60px',
             duration: 2500,
             delay: 400
         });
