--- a/xinglong-map/index.html
+++ b/xinglong-map/index.html
@@ -25,7 +25,8 @@
     <div id="map"></div>
     <section>
         <div id="setview-btn">
-            查看興隆里
+            查看<br />
+            興隆里
         </div>
     </section>
 
