--- a/xinglong-map/home.html
+++ b/xinglong-map/home.html
@@ -93,7 +93,7 @@
         </div>
     </section>
 
-    <section class="s2">
+    <section class="s2 s2-1">
         <div class="section-60">
             <div>
                 <h1>" 台中市 "</h1>
@@ -103,13 +103,13 @@
             </div>
         </div>
         <div class="section-40">
-            <img src="resource/center.png" class="image">
+            <img src="resource/taichung.jpg" class="image">
         </div>
     </section>
 
     <section class="s3">
         <div class="section-40">
-            <img src="resource/tree.png" class="image">
+            <img src="resource/opera.png" class="image">
         </div>
         <div class="section-60">
             <div>
@@ -131,7 +131,7 @@
         </div>
     </section>
 
-    <section class="s2">
+    <section class="s2 s2-2">
         <div class="section-60">
             <div>
                 <h1>" 太平區 "</h1>
@@ -141,13 +141,13 @@
             </div>
         </div>
         <div class="section-40">
-            <img src="resource/center.png" class="image">
+            <img src="resource/taiping.jpg" class="image">
         </div>
     </section>
 
     <section class="s3">
         <div class="section-40">
-            <img src="resource/tree.png" class="image">
+            <img src="resource/cigarette.png" class="image">
         </div>
         <div class="section-60">
             <div>
@@ -168,7 +168,7 @@
         </div>
     </section>
 
-    <section class="s2">
+    <section class="s2 s2-3">
         <div class="section-60">
             <div>
                 <h1>" 興隆里 "</h1>
@@ -178,13 +178,13 @@
             </div>
         </div>
         <div class="section-40">
-            <img src="resource/center.png" class="image">
+            <img src="resource/xinglong.jpg" class="image">
         </div>
     </section>
 
     <section class="s3">
         <div class="section-40">
-            <img src="resource/tree.png" class="image">
+            <img src="resource/center.png" class="image">
         </div>
         <div class="section-60">
             <div>
@@ -244,7 +244,7 @@
                 reset: false,
                 distance: '60px',
                 duration: 2500,
-                delay: 400
+                delay: 200
             });
             ScrollReveal().reveal('.s1', { delay: 200, origin: 'bottom' });
             ScrollReveal().reveal('.s2 .section-40', { delay: 200, origin: 'right' });
