--- a/xinglong-map/home.html
+++ b/xinglong-map/home.html
@@ -243,13 +243,12 @@
             ScrollReveal({
                 reset: false,
                 distance: '60px',
-                duration: 2500,
-                delay: 200
+                duration: 2500
             });
             ScrollReveal().reveal('.s1', { delay: 200, origin: 'bottom' });
             ScrollReveal().reveal('.s2 .section-40', { delay: 200, origin: 'right' });
-            ScrollReveal().reveal('.s2 .section-60 div, .s3 .section-60 div', { delay: 500, origin: 'bottom' });
-            ScrollReveal().reveal('.s3 .section-40', { delay: 500, origin: 'left' });
+            ScrollReveal().reveal('.s2 .section-60 div, .s3 .section-60 div', { delay: 300, origin: 'bottom' });
+            ScrollReveal().reveal('.s3 .section-40', { delay: 300, origin: 'left' });
         };
 
         $('.content').mouseover(() => {
