--- a/monzzle2.0/subject.html
+++ b/monzzle2.0/subject.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>關於我們</title>
+    <title>專題介紹</title>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
@@ -45,16 +45,16 @@
                     <a href="about.html">關於我們</a>
                 </div>
                 <div class="nav nav-3">
-                    <a href="">專題介紹</a>
+                    <a href="subject.html">專題介紹</a>
                 </div>
                 <div class="nav nav-4">
-                    <a href="#">妖怪選單</a>
+                    <a href="monster.html">妖怪選單</a>
                 </div>
                 <div class="nav nav-5">
-                    <a href="#">小遊戲</a>
+                    <a href="game.html">小遊戲</a>
                 </div>
                 <div class="nav nav-6">
-                    <a href="#">商城</a>
+                    <a href="shop.html">商城</a>
                 </div>
             </div>
         </div>
