--- a/monzzle2.0/index.html
+++ b/monzzle2.0/index.html
@@ -44,16 +44,16 @@
                     <a href="about.html">關於我們</a>
                 </div>
                 <div class="nav nav-3">
-                    <a href="#">專題介紹</a>
+                    <a href="subject.html">專題介紹</a>
                 </div>
                 <div class="nav nav-4">
-                    <a href="#">妖怪選單</a>
+                    <a href="monster.html">妖怪選單</a>
                 </div>
                 <div class="nav nav-5">
-                    <a href="#">小遊戲</a>
+                    <a href="game.html">小遊戲</a>
                 </div>
                 <div class="nav nav-6">
-                    <a href="#">商城</a>
+                    <a href="shop.html">商城</a>
                 </div>
             </div>
         </div>
