--- a/monzzle2.0/monster.html
+++ b/monzzle2.0/monster.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>關於我們</title>
+    <title>妖怪選單</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -42,16 +42,16 @@
                     <a href="about.html">關於我們</a>
                 </div>
                 <div class="nav nav-3">
-                    <a href="#">專題介紹</a>
+                    <a href="subject.html">專題介紹</a>
                 </div>
                 <div class="nav nav-4">
-                    <a href="#">妖怪選單</a>
+                    <a href="monster.html">妖怪選單</a>
                 </div>
                 <div class="nav nav-5">
-                    <a href="#">小遊戲</a>
+                    <a href="game.html">小遊戲</a>
                 </div>
                 <div class="nav nav-6">
-                    <a href="#">商城</a>
+                    <a href="shop.html">商城</a>
                 </div>
             </div>
         </div>
@@ -153,7 +153,7 @@
                         <h2 class="name" id="card-name"></h2>
                         <a href="#" class="buy">Buy Now</a>
                         <div class="circle" id="card-bg"></div>
-                        <img src="resource/monster/bird.png" class="product" id="monster-img">
+                        <img src="resource/monster/bird.png" class="product image" id="monster-img">
                     </div>
                 </div>
             </div>
@@ -183,58 +183,7 @@
     <script src="js/menu.js"></script>
     <script src="js/monster.js"></script>
     <script src="js/vanilla-tilt.min.js"></script>
-    <script>
-        var imgs = [];  					//定義一個運算元組
-        $('.image').each(function () {  	//遍歷所有圖片,將圖片
-            var dfd = $.Deferred();  				//定義一個將要完成某個操作的物件
-            $(this).bind('load', function () {
-                dfd.resolve();  			//圖片載入完成後,表示操作成功
-            });
-            if (this.complete) {				//如果圖片載入狀態為完成,那麼也標識操作成功
-                setTimeout(function () {
-                    dfd.resolve();
-                }, 2000);
-            }
-            imgs.push(dfd);  			//將所有操作物件放入陣列中
-        })
-        $.when.apply(null, imgs).done(function () {  	//註冊所有操作完成後的執行方法
-            $('.loader_bg').hide();
-            loadedImg();
-        });
 
-        ScrollReveal({
-            reset: true, distance: '60px',
-            duration: 2500,
-            delay: 400
-        });
-
-        function loadedImg() {
-            ScrollReveal({
-                reset: false,
-                distance: '60px',
-                duration: 2500,
-                delay: 400
-            });
-
-        };
-
-        $('#content').mouseover(() => {
-            $('.content-text p').addClass('hover');
-        });
-        $('#content').mouseout(() => {
-            $('.content-text p').removeClass('hover');
-        });
-
-        $(document).ready(() => {
-            let winWidth = $(window).width();
-            if (winWidth > 600) {
-                VanillaTilt.init(document.querySelector(".box"), {
-                    max: 15,
-                    speed: 200
-                });
-            }
-        })
-    </script>
 </body>
 
 </html>
