--- a/monzzle3.0/about.html
+++ b/monzzle3.0/about.html
@@ -81,6 +81,9 @@
         </div>
     </div>
 
+    <div class="menu-mask"></div>
+
+
     <section class="s-banner">
         <div class="title-content">
             <div class="title-text">
