--- a/monzzle3.0/index.html
+++ b/monzzle3.0/index.html
@@ -80,6 +80,9 @@
         </div>
     </div>
 
+    <div class="menu-mask"></div>
+
+
     <div class="banner-logo">
         <img src="resource/logo-min.png" id="logoImg" class="image">
     </div>
