--- a/monzzle3.0/subject.html
+++ b/monzzle3.0/subject.html
@@ -6,13 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>專題介紹</title>
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
-        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="js/scrollreveal.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/loader.css">
     <link rel="stylesheet" href="css/base.css">
@@ -28,8 +24,8 @@
         <div class="logo">
             <a href="index.html"><img src="resource/headerlogo.png" class=""></a>
         </div>
-        <div class="right">
-            <div id="menu-border"></div>
+        <div class="header-right">
+            <div class="menu-border" id="menu-border"></div>
             <div class="menu-btn" id="menu-btn">
                 <i class="fa-solid fa-angle-down" id="btn"></i>
             </div>
